--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,15 @@
     <version>0.0.1</version>
     <name>MWork</name>
 
+    <distributionManagement>
+        <repository>
+            <id>gitlab-maven</id>
+            <!--suppress UnresolvedMavenProperty -->
+            <url>https://gitlab.com/api/v4/projects/${env.CI_PROJECT_ID}/packages/maven</url>
+        </repository>
+    </distributionManagement>
+
+
     <build>
         <plugins>
             <plugin>
