--- a/.gitignore
+++ b/.gitignore
@@ -126,7 +126,7 @@ fabric.properties
 *.zip
 *.tar.gz
 *.rar
-
+*.dat
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
